--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,9 +1,24 @@
-<div class="container__menu-bar">
-  <ul>
-    <li><a href="https://linkedin.com/in/felipe-aguiar-exe">Linkedin</a></li>
-    <li><span>•</span></li>
-    <li><a href="https://github.com/felipeAguiarCode">Github</a></li>
-    <li><span>•</span></li>
-    <li><a href="https://www.youtube.com/channel/UCCcDZkI7AITYFCgDEFV9OoQ">Youtube</a></li>
-  </ul>
-</div>
+<div class="menu-bar__item">
+    <ul>
+      <li>
+        <a href="https://www.linkedin.com/in/pedrouchoa7" target="_blank">
+          <img 
+          src="assets/linkedin.jpg.png" 
+          alt="LinkedIn"
+          srcset=""
+          width="32px"
+          height="32px">>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/pedrouchoa7" target="_blank">
+          <img 
+          src="assets/github.jpg.png" 
+          alt="GitHub"
+          srcset=""
+          width="32px"
+          height="32px">>
+        </a>
+      </li>
+    </ul>
+  </div>
