--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,5 +1,5 @@
-<div class="container__menu-title">
-  <hr/>
-  <h1>MARVEL BLOG</h1>
-  <hr/>
+<div class="menu-title__container">
+    <hr>
+    <h1>PALMEIRAS BLOG</h1>
+    <hr>
 </div>
