--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,31 +1,29 @@
-.container__big-card{
-
-  margin-left: 20px;
-  margin-right: 20px;
-
-  width: 400px;
-  height: 500px;
-
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+.big-card__container {
+    align-items: flex-start;
+    /* border: 2px solid white; */
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    justify-content: flex-start;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 400px;
 }
 
-.big-card__title > h1  {
-  margin-top: 15px;
-  font-size: 20px;
+.big-card__title > h1 {
+    font-size: 20px;
+    margin-top: 15px;
 }
 
-.big-card__description{
-  margin-top: 20px;
+.big-card__description {
+    margin-top: 10px;
 }
 
 .big-card__description > p > a {
-  color: grey;
+    color: grey;
 }
 
-.big-card__photo > img{
-  width: 100%;
-  min-width: 400px;
+.big-card__photo > img {
+    min-width: 400px;
+    width: 100%;
 }
