--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,12 +1,29 @@
 
-
-.container__menu-bar > ul{
-  display: flex;
-  flex-direction: row;
-}
-
-.container__menu-bar > ul > li{
-  margin-right: 20px;
-  list-style: none;
-}
-
+.menu-bar__item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+  }
+  
+  .menu-bar__item > ul{
+      display: flex;
+      list-style-type: none;
+  }
+  
+  .menu-bar__item > ul > li {
+      padding: 5px;
+      margin-right: 15px;
+  }
+  
+  .menu-bar__item > ul > li > a {
+      text-decoration: none;
+      padding: 5px;
+      color: rgb(7, 7, 7);
+      font-family: 'Segoe UI';
+  }
+  
+  .menu-bar__item > ul > li > a:hover {
+      color: blue;
+      font-weight: 600;
+  }
