--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -1,17 +1,17 @@
-.container__menu-title{
-  color: white;
+.menu-title__container {
+    color: white;
 }
 
-.container__menu-title > h1{
-  margin-top: 15px;
-  margin-bottom: 15px;
-  font-size: 135px;
-  font-family: 'segoe UI';
-  display: flex;
-  justify-content: center;
+.menu-title__container > h1 {
+    display: flex;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 120px;
+    justify-content: center;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
-.container__menu-title > hr{
-  margin-top: 20px;
-  margin-bottom: 5px;
+.menu-title__container > hr {
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
