--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,25 +1,25 @@
-.container__small-card{
-  width: 700px;
-  margin-bottom: 15px;
+.small-card__container {
+    margin-bottom: 15px;
+    width: 700px;
 }
 
-.container__small-card-content{
-  display: flex;
-  flex-direction: row;
+.small-card__content {
+    display: flex;
+    flex-direction: row;
 }
 
 .small-card__photo > img {
-  width: 200px;
-  min-width: 200px;
-  margin-right: 20px;
+    margin-right: 20px;
+    min-width: 200px;
+    width: 200px;
 }
 
 .small-card__title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
-.container__small-card__separator{
-  margin-top: 10px;
+.small-card__separator {
+    margin-top: 10px;
 }
