--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,24 +1,13 @@
-<div class="container__small-card">
-
-  <div class="container__small-card-content">
-    <div class="small-card__photo">
-      <img
-        src="{{ photoCover }}"
-        alt=""
-        srcset=""
-      >
+<div class="small-card__container">
+    <div class="small-card__content">
+        <div class="small-card__photo">
+            <img src="{{ photoCover }}" alt="">
+        </div>
+        <div class="small-card__title">
+            <h1><a [routerLink]="['content', id]">{{ cardTitle }}</a></h1>
+        </div>
     </div>
-
-    <div class="small-card__title">
-      <h1><a [routerLink]="['content', Id]" >{{ cardTitle }}</a></h1>
+    <div class="small-card__separator">
+        <hr>
     </div>
-  </div>
-
-  <div class="container__small-card__separator">
-    <hr>
-  </div>
-
 </div>
-
-
-
