--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,9 +1,6 @@
-.container__articles{
-  margin-top: 30px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.home__articles {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 30px;
 }
-
-
