--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,38 +1,33 @@
 <app-menu-title></app-menu-title>
+<div class="home__articles">
+    <div class="articles__main">
+        <app-big-card
+            id="1" 
+            photoCover="assets/ESTEVÃO.png"
+            cardTitle="COM TRÊS DE ESTÊVÃO, VERDÃO BATE SÃO PAULO E É BICAMPEÃO CONSECUTIVO DO BRASILEIRO SUB-17"
+            cardDescription="O Palmeiras é campeão do Campeonato Brasileiro Sub-17 de 2023! Neste sábado (21), o time alviverde derrotou o São Paulo por 3 a 0, na Arena Barueri, e ficou com o título na grande decisão do torneio. Os três gols das Crias da Academia foram marcados por Estêvão."
+        ></app-big-card>
+    </div>
+    <div class="articles__others">
+        <app-small-card
+            id="2"
+            photoCover="assets/menino.png"
+            cardTitle="PALMEIRAS FAZ TREINO ESPECÍFICO E GABRIEL MENINO VALORIZA SEMANA DE TRABALHO"
+            cardDescription="O Palmeiras deu sequência na manhã desta terça-feira (17), na Academia de Futebol, à preparação para o confronto com o Atlético-MG, na quinta (19), às 19h, no Allianz Parque, pela 27ª rodada do Campeonato Brasileiro. Sob chuva, o elenco começou o dia com um treino técnico com ênfases específicas."
+        ></app-small-card>
 
-<div class="container__articles">
-  <div class="articles__main">
+        <app-small-card
+            id="3"
+            photoCover="assets/sub.png"
+            cardTitle="SUB-11 E SUB-13 VENCEM UNIÃO MOGI E ATLÉTICO MOGI PELAS QUARTAS DO PAULISTA"
+            cardDescription="O Palmeiras deu sequência na manhã desta terça-feira (17), na Academia de Futebol, à preparação para o confronto com o Atlético-MG, na quinta (19), às 19h, no Allianz Parque, pela 27ª rodada do Campeonato Brasileiro. Sob chuva, o elenco começou o dia com um treino técnico com ênfases específicas."
+        ></app-small-card>
 
-    <app-big-card
-      Id="1"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg"
-      cardTitle="NOVO HOMEM DE FERRO EM 3D"
-      cardDescription="Marvel Anuncia novo homem de ferro"
-      >
-    </app-big-card>
-
-  </div>
-  <div class="articles__others">
-    <app-small-card
-      Id="2"
-      cardTitle="Nova Série anunciada no Disney +"
-      photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
-    >
-    </app-small-card>
-
-    <app-small-card
-      Id="3"
-      cardTitle="Novo filme do pantera negra lançado em breve"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/35720ACD323F927C3A83D809D0F460BD3651740DA519BCC184B6F042057EA14D/scale?width=1200&aspectRatio=1.78&format=jpeg"
-    >
-    </app-small-card
-    >
-
-    <app-small-card
-      Id="4"
-      cardTitle="Novo filme dos X-men está em pós produção, afirma diretor"
-      photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
-    >
-    </app-small-card>
-  </div>
+        <app-small-card
+            id="4"
+            photoCover="assets/samia.png"
+            cardTitle="SÂMIA MARCA PELA PRIMEIRA VEZ COM A CAMISA DO VERDÃO NAS QUARTAS DA LIBERTADORES: ‘SENTIMENTO IMENSURÁVEL"
+            cardDescription="A noite do último sábado (14) foi especial para a meio-campista Sâmia. No Palmeiras desde o ano passado, a atleta balançou as redes pela primeira vez com a camisa do clube, na goleada alviverde contra o Olimpia (PAR), por 6 a 0, nas quartas de final da CONMEBOL Libertadores Feminina de 2023, no Estádio Metropolitano de Techo, em Bogotá (COL)"
+        ></app-small-card>
+    </div>
 </div>
