--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-*{
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-  background-color: #111111;
-  color:white;
-  font-family: 'Segoe UI';
+* {
+    background-color: #ffffff;
+    box-sizing: border-box;
+    color: rgb(0, 74, 16);
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-a{
-  text-decoration: none;
+a {
+    text-decoration: none;
 }
